static/css/styles.css
/*------ Additional general settings for whole site ------*/
body {
    padding-top: 56px;
    background-color: #ededed;
    color: #003366;
}

.boldtext {
    font-weight: 500;
}

/*------ Additional styling for navbar ------*/
.navbar {
    
    background-color: #003366;
}

.nav-link:hover {
    color: #ffffff;
    text-decoration: underline;
}

/*------ Settings for the Home page header ------*/
#headline {
    background-image: url(media/headline.jpg);
    background-color: #003366;
    background-repeat: space;
    background-blend-mode: color;
    height: auto;
    width: 100%;
    color: #ffffff;
}

/*------ Setting to align home page to fit viewport ------*/
.content {
    margin: 0;
}

/*------ Success message settings ------*/
.success {
    color: #28a745;
    border-color: #28a745;
    background-color: #d4edda;
    list-style-type: none;
    text-align: center;
}

/*------ Error message settings ------*/
.error {
    color: #dc3545;
    border-color: #dc3545;
    background-color: #f8d7da;
    list-style-type: none;
    text-align: center;
}

/*------ Additional setting for each issue card ------*/
.card-title {
    font-size: 1.25rem;
}

/*------ Fixed Issue settings ------*/
.F {
    color: #28a745;
    border-color: #28a745;
}

/*------ In Progress Issue settings ------*/
.P {
    color: #ffc107;
    border-color: #ffc107;
}

/*------ Open Issue settings ------*/
.O {
    color: #dc3545;
    border-color: #dc3545;
}

/*------ Issue comment settings ------*/
.comment {
    border-color: #003366;
}

/*------ Additional setting for Profile update form ------*/
#update-form {
    display: none;
}

/*------ Adding specific colors to profile bar chart legend ------*/
#btn1 {
    background-color: green;
}

#btn2 {
    background-color: yellowgreen;
}

#btn3 {
    background-color: blue;
}

#btn4 {
    background-color: cyan;
}

#btn5 {
    background-color: maroon;
}

/*------ Additional settings for page footer ------*/
footer {
    border-top: 1px solid #ededed;
    background-color: #003366;
    color: #ffffff;
}

